aligned text in about page. Also diagnosed issue with buttons in about and service: the buttons are in flex containers

--- a/client/src/pages/about/about.css
+++ b/client/src/pages/about/about.css
@@ -19,13 +19,28 @@
 #about-row-one {
   height: 628px;
   font-family: Kanit;
+  font-size: 35px;
+}
+
+#about-paragraph-one {
+  position: relative;
+  left: 21.2%;
 }
 
 #about-row-two {
   height: 522px;
   font-family: Kanit;
+  font-size: 35px;
+}
+
+#about-paragraph-two {
+  position: relative;
+  left: 50.6%;
 }
 
 #about-button-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 321px;
 }
